--- a/extension/dpbh.css
+++ b/extension/dpbh.css
@@ -36,7 +36,7 @@ body {
     outline: 0;
     border: 0;
     margin-left: 92px;
-    margin-top: 20px;
+    margin-top: 10px;
     cursor: pointer;
     transition: box-shadow 0.15s ease,transform 0.15s ease;
     will-change: box-shadow,transform;
@@ -71,6 +71,9 @@ h2 {
 	text-transform: uppercase;
 	text-shadow: 0 2px white, 0 3px #777;
 }
+
+
+  
 .output-text{
     text-align: center;
     font-size: 25px;
@@ -81,4 +84,48 @@ h2 {
 	line-height: 42px;
 	text-transform: uppercase;
 	text-shadow: 0 2px grey, 0 3px #777;
+}
+ 
+label {
+    color: #ffffff; 
+}
+.lst_container{
+    overflow: auto;
+    height: 160px;
+    width: 300px;
+   
+    
+}
+.display_lst{
+    color: #ffffff; 
+
+    
+}
+
+.input-button1{
+    display: inline-block;
+    outline: 0;
+    border: 0;
+    margin-left: 92px;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: box-shadow 0.15s ease,transform 0.15s ease;
+    will-change: box-shadow,transform;
+    background: #FCFCFD;
+    box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #d6d6e7;
+    height: 28px;
+    padding: 0 32px;
+    font-size: 18px;
+    border-radius: 6px;
+    color: #36395a;
+    transition: box-shadow 0.15s ease,transform 0.15s ease;
+    :hover {
+        box-shadow: 0px 4px 8px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #d6d6e7;
+        transform: translateY(-2px);
+    }
+    :active{
+        box-shadow: inset 0px 3px 7px #d6d6e7;
+        transform: translateY(2px);
+    }
+    
 }
