--- a/extension/dpbh.css
+++ b/extension/dpbh.css
@@ -106,6 +106,7 @@ label {
     margin: 15px;
     width: 60%;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .lst_container::-webkit-scrollbar {
